--- a/aula08/pyproject.toml
+++ b/aula08/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+pandas = "^2.2.3"
+pandera = "^0.22.1"
+fastparquet = "^2024.11.0"
 
 
 [build-system]
